--- a/src/index.scss
+++ b/src/index.scss
@@ -475,15 +475,19 @@ img {
     display: flex;
     align-items: center;
     justify-content: center;
-    width: calc(100% - 20px);
+    width: 1500px;
+    max-width: calc(100% - 20px);
     top: 10px;
     z-index: 50;
-    margin: 10px;
+    margin: 10px auto;
     margin-top: calc(#{-$navbarHeight} - 10px);
 
     @media only screen and (max-width: $collapseNavbarWidth) {
         flex-direction: column;
+        width: calc(100% - 20px);
+        margin: 10px;
         margin-top: calc(#{-$navbarHeight * 0.7} - 10px);
+        max-width: unset;
     }
 
     .nameContainer {
