--- a/src/index.scss
+++ b/src/index.scss
@@ -470,8 +470,8 @@ img {
 // ###################################################
 
 .navbar {
-    position: sticky;
     position: -webkit-sticky;
+    position: sticky;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -485,9 +485,9 @@ img {
     @media only screen and (max-width: $collapseNavbarWidth) {
         flex-direction: column;
         width: calc(100% - 20px);
+        max-width: unset;
         margin: 10px;
         margin-top: calc(#{-$navbarHeight * 0.7} - 10px);
-        max-width: unset;
     }
 
     .nameContainer {
@@ -680,16 +680,162 @@ img {
 }
 
 // ###################################################
+//      FOOTER
+// ###################################################
+
+.footer {
+    position: -webkit-sticky;
+    position: sticky;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+    bottom: -10rem;
+    overflow: visible;
+
+    .apps {
+        position: relative;
+        height: 5rem;
+        width: 100%;
+        overflow: visible;
+        background-color: white;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        @include box-shadow(0 0 20px 0 rgba(0, 0, 0, 0.3));
+
+        @media only screen and (max-width: $collapseNavbarWidth) {
+            height: 4rem;
+        }
+
+        .icons {
+            position: relative;
+            margin-left: 5rem;
+            flex-grow: 1;
+            height: 100%;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            overflow-x: auto;
+
+            @media only screen and (max-width: $collapseNavbarWidth) {
+                margin-left: 0;
+                align-items: unset;
+                justify-content: unset;
+                flex-grow: unset;
+            }
+
+            .icon {
+                height: 4rem;
+                margin: 0.5rem;
+                transform: scale(1);
+                @include box-shadow(0 0 10px 0 rgba(0, 0, 0, 0.3));
+                @include border-radius(25%);
+                @include transition(all 0.2s ease-in-out);
+
+                @media only screen and (max-width: $collapseNavbarWidth) {
+                    height: 3rem;
+                    min-height: 3rem;
+                    max-height: 3rem;
+                    width: 3rem;
+                    min-width: 3rem;
+                    max-width: 3rem;
+                }
+
+                &:hover {
+                    transform: scale(1.1);
+
+                    @media only screen and (max-width: $collapseNavbarWidth) {
+                        transform: scale(1);
+                    }
+                }
+            }
+
+            .spacing {
+                display: none;
+
+                @media only screen and (max-width: $collapseNavbarWidth) {
+                    display: block;
+                    height: 100%;
+                    min-height: 100%;
+                    max-height: 100%;
+                    width: 1px;
+                    min-width: 1px;
+                    max-width: 1px;
+                }
+            }
+        }
+
+        .goTopContainer {
+            width: 3rem;
+            height: 3rem;
+            margin: 1rem;
+            background-color: rgb(85, 85, 85);
+            transform: scale(1);
+            opacity: 0;
+            @include border-radius(100vw);
+            @include transition(all 0.2s ease-in-out);
+
+            @media only screen and (max-width: $collapseNavbarWidth) {
+                position: absolute;
+                right: 0;
+                top: -3.5rem;
+                height: 2.5rem;
+                min-height: 2.5rem;
+                max-height: 2.5rem;
+                width: 2.5rem;
+                min-width: 2.5rem;
+                max-width: 2.5rem;
+                margin: 0.5rem;
+            }
+
+            .goTop {
+                width: 100%;
+                height: 100%;
+                padding: 0.9rem;
+                transform: rotate(90deg);
+                color: white;
+
+                @media only screen and (max-width: $collapseNavbarWidth) {
+                    padding: 0.5rem;
+                }
+            }
+
+            &:hover {
+                transform: scale(1.1);
+
+                @media only screen and (max-width: $collapseNavbarWidth) {
+                    transform: scale(1);
+                }
+            }
+
+            &.visible {
+                opacity: 1;
+            }
+        }
+    }
+
+    .info {
+        height: 10rem;
+        width: 100%;
+        background-color: rgb(75, 75, 75);
+        // overflow: visible;
+    }
+}
+
+// ###################################################
 //      SPLASH SCREEN
 // ###################################################
 
 .splashScreen {
+    position: -webkit-sticky;
     position: sticky;
     height: calc(50% - #{$navbarHeight / 2});
     width: 100%;
     top: calc(#{$navbarHeight} - calc(calc(50% - #{$navbarHeight / 2}) - 20px));
     z-index: 40;
-    @include box-shadow(0 10px 15px rgba(0, 0, 0, 0.4));
+    @include box-shadow(0 0 20px 0 rgba(0, 0, 0, 0.5));
 
     @media only screen and (max-width: $collapseNavbarWidth) {
         height: calc(50% - #{$navbarHeight / 2 * 0.7});
@@ -1067,11 +1213,11 @@ img {
             }
 
             .process {
+                color: rgba(0, 0, 0, 0.507);
                 margin: 2rem 0 0.5rem 2rem;
                 padding: 1rem;
                 font-size: 1.1rem;
                 font-weight: 700;
-                color: rgba(0, 0, 0, 0.507);
 
                 @media only screen and (max-width: $collapseNavbarWidth) {
                     display: none;
@@ -1317,8 +1463,8 @@ img {
                     .videoPlayIcon {
                         height: 100%;
                         width: 100%;
-                        padding: 1.5rem;
                         margin: 2px 0 0 3px;
+                        padding: 1.5rem;
                     }
                 }
             }
