--- a/src/index.scss
+++ b/src/index.scss
@@ -697,21 +697,32 @@ img {
     .apps {
         position: relative;
         height: 5rem;
-        width: 100%;
+        width: fit-content;
+        max-width: 1500px;
         overflow: visible;
-        background-color: white;
+        margin-bottom: 10px;
         display: flex;
         align-items: center;
         justify-content: center;
+        transform: translateY(0rem);
         @include box-shadow(0 0 20px 0 rgba(0, 0, 0, 0.3));
+        @include border-radius(1.5rem);
+        @include transition(all 0.4s ease-in-out);
 
         @media only screen and (max-width: $collapseNavbarWidth) {
             height: 4rem;
+            max-width: 100%;
+            width: 100%;
+            margin: 0;
+            @include border-radius(0);
+        }
+
+        &.appsHidden {
+            transform: translateY(6rem);
         }
 
         .icons {
             position: relative;
-            margin-left: 5rem;
             flex-grow: 1;
             height: 100%;
             display: flex;
@@ -720,15 +731,14 @@ img {
             overflow-x: auto;
 
             @media only screen and (max-width: $collapseNavbarWidth) {
-                margin-left: 0;
                 align-items: unset;
                 justify-content: unset;
                 flex-grow: unset;
             }
 
             .icon {
-                height: 4rem;
-                margin: 0.5rem;
+                height: 3.4rem;
+                margin: 0.8rem 0 0.8rem 0.8rem;
                 transform: scale(1);
                 @include box-shadow(0 0 10px 0 rgba(0, 0, 0, 0.3));
                 @include border-radius(25%);
@@ -741,6 +751,7 @@ img {
                     width: 3rem;
                     min-width: 3rem;
                     max-width: 3rem;
+                    margin: 0.5rem 0 0.5rem 0.5rem;
                 }
 
                 &:hover {
@@ -753,66 +764,68 @@ img {
             }
 
             .spacing {
-                display: none;
+                height: 100%;
+                min-height: 100%;
+                max-height: 100%;
+                width: 0.8rem;
+                min-width: 0.8rem;
+                max-width: 0.8rem;
 
                 @media only screen and (max-width: $collapseNavbarWidth) {
-                    display: block;
-                    height: 100%;
-                    min-height: 100%;
-                    max-height: 100%;
-                    width: 1px;
-                    min-width: 1px;
-                    max-width: 1px;
+                    width: 0.5rem;
+                    min-width: 0.5rem;
+                    max-width: 0.5rem;
                 }
             }
         }
+    }
 
-        .goTopContainer {
-            width: 3rem;
-            height: 3rem;
-            margin: 1rem;
-            background-color: rgb(85, 85, 85);
-            transform: scale(1);
-            opacity: 0;
-            @include border-radius(100vw);
-            @include transition(all 0.2s ease-in-out);
+    .goTopContainer {
+        position: absolute;
+        right: 0;
+        top: 10px;
+        width: 3rem;
+        height: 3rem;
+        margin: 1rem;
+        background-color: rgb(85, 85, 85);
+        transform: scale(1);
+        opacity: 0;
+        @include border-radius(100vw);
+        @include transition(all 0.2s ease-in-out);
+
+        @media only screen and (max-width: $collapseNavbarWidth) {
+            top: -3.5rem;
+            height: 2.5rem;
+            min-height: 2.5rem;
+            max-height: 2.5rem;
+            width: 2.5rem;
+            min-width: 2.5rem;
+            max-width: 2.5rem;
+            margin: 0.5rem;
+        }
+
+        .goTop {
+            width: 100%;
+            height: 100%;
+            padding: 0.9rem;
+            transform: rotate(90deg);
+            color: white;
 
             @media only screen and (max-width: $collapseNavbarWidth) {
-                position: absolute;
-                right: 0;
-                top: -3.5rem;
-                height: 2.5rem;
-                min-height: 2.5rem;
-                max-height: 2.5rem;
-                width: 2.5rem;
-                min-width: 2.5rem;
-                max-width: 2.5rem;
-                margin: 0.5rem;
+                padding: 0.7rem;
             }
+        }
 
-            .goTop {
-                width: 100%;
-                height: 100%;
-                padding: 0.9rem;
-                transform: rotate(90deg);
-                color: white;
+        &:hover {
+            transform: scale(1.1);
 
-                @media only screen and (max-width: $collapseNavbarWidth) {
-                    padding: 0.5rem;
-                }
+            @media only screen and (max-width: $collapseNavbarWidth) {
+                transform: scale(1);
             }
+        }
 
-            &:hover {
-                transform: scale(1.1);
-
-                @media only screen and (max-width: $collapseNavbarWidth) {
-                    transform: scale(1);
-                }
-            }
-
-            &.visible {
-                opacity: 1;
-            }
+        &.visible {
+            opacity: 1;
         }
     }
 
@@ -880,6 +893,11 @@ img {
 
     &.black {
         background: radial-gradient(circle, rgba(0, 0, 0, 0.7) 0%, rgba(0, 0, 0, 0.6) 75%);
+    }
+
+    &.apps {
+        background: radial-gradient(circle, rgba(255, 255, 255, 0.6) 0%, rgba(255, 255, 255, 0.3) 75%);
+        backdrop-filter: blur(10px);
     }
 
     //  WEB DEV
@@ -1439,12 +1457,12 @@ img {
                 .videoIconContainer {
                     pointer-events: none;
                     position: absolute;
-                    height: 4.5rem;
-                    max-height: 4.5rem;
-                    min-height: 4.5rem;
-                    width: 4.5rem;
-                    max-width: 4.5rem;
-                    min-width: 4.5rem;
+                    height: 3.5rem;
+                    max-height: 3.5rem;
+                    min-height: 3.5rem;
+                    width: 3.5rem;
+                    max-width: 3.5rem;
+                    min-width: 3.5rem;
                     background-color: $cursor-active-color;
                     opacity: 0;
 
@@ -1463,8 +1481,8 @@ img {
                     .videoPlayIcon {
                         height: 100%;
                         width: 100%;
-                        margin: 2px 0 0 3px;
-                        padding: 1.5rem;
+                        margin: 1px 0 0 2px;
+                        padding: 1.2rem;
                     }
                 }
             }
