--- a/src/index.scss
+++ b/src/index.scss
@@ -787,10 +787,10 @@ img {
         width: 3rem;
         height: 3rem;
         margin: 1rem;
-        background-color: rgb(85, 85, 85);
         transform: scale(1);
         opacity: 0;
         @include border-radius(100vw);
+        @include box-shadow(0 0 15px 0 rgba(0, 0, 0, 0.4));
         @include transition(all 0.2s ease-in-out);
 
         @media only screen and (max-width: $collapseNavbarWidth) {
@@ -892,6 +892,7 @@ img {
     }
 
     &.black {
+        border: solid 1px rgba(71, 71, 71, 0.15);
         background: radial-gradient(circle, rgba(0, 0, 0, 0.7) 0%, rgba(0, 0, 0, 0.6) 75%);
     }
 
@@ -1386,7 +1387,7 @@ img {
                     }
 
                     &.neoWar {
-                        margin: 0 5.9rem;
+                        margin: 0 5.9rem 1.5rem;
                     }
 
                     &.escape {
@@ -1545,7 +1546,7 @@ img {
         right: 0;
         overflow: visible;
         will-change: transform;
-        touch-action: none;
+        touch-action: pan-y;
 
         .noVideo & {
             .horizontal & {
