--- a/src/index.scss
+++ b/src/index.scss
@@ -691,28 +691,32 @@ img {
     align-items: center;
     justify-content: center;
     width: 100%;
-    bottom: -10rem;
+    bottom: -18rem;
     overflow: visible;
+
+    @media only screen and (max-width: $collapseNavbarWidth) {
+        bottom: -11rem;
+    }
 
     .apps {
         position: relative;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        transform: translateY(0rem);
         height: 5rem;
         width: fit-content;
         max-width: 1500px;
         overflow: visible;
         margin-bottom: 10px;
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        transform: translateY(0rem);
         @include box-shadow(0 0 20px 0 rgba(0, 0, 0, 0.3));
         @include border-radius(1.5rem);
         @include transition(all 0.4s ease-in-out);
 
         @media only screen and (max-width: $collapseNavbarWidth) {
             height: 4rem;
-            max-width: 100%;
             width: 100%;
+            max-width: 100%;
             margin: 0;
             @include border-radius(0);
         }
@@ -723,34 +727,33 @@ img {
 
         .icons {
             position: relative;
-            flex-grow: 1;
-            height: 100%;
             display: flex;
+            flex-grow: 1;
             align-items: center;
             justify-content: center;
+            height: 100%;
             overflow-x: auto;
 
             @media only screen and (max-width: $collapseNavbarWidth) {
-                align-items: unset;
-                justify-content: unset;
                 flex-grow: unset;
+                justify-content: unset;
             }
 
             .icon {
+                transform: scale(1);
                 height: 3.4rem;
                 margin: 0.8rem 0 0.8rem 0.8rem;
-                transform: scale(1);
                 @include box-shadow(0 0 10px 0 rgba(0, 0, 0, 0.3));
                 @include border-radius(25%);
                 @include transition(all 0.2s ease-in-out);
 
                 @media only screen and (max-width: $collapseNavbarWidth) {
                     height: 3rem;
-                    min-height: 3rem;
                     max-height: 3rem;
+                    min-height: 3rem;
                     width: 3rem;
-                    min-width: 3rem;
                     max-width: 3rem;
+                    min-width: 3rem;
                     margin: 0.5rem 0 0.5rem 0.5rem;
                 }
 
@@ -763,18 +766,25 @@ img {
                 }
             }
 
+            .separator {
+                height: 70%;
+                margin: 0 1rem 0 1.8rem;
+                border-left: solid 2px rgba(0, 0, 0, 0.2);
+                @include box-shadow(0 0 10px 0 rgba(0, 0, 0, 0.2));
+            }
+
             .spacing {
                 height: 100%;
-                min-height: 100%;
                 max-height: 100%;
+                min-height: 100%;
                 width: 0.8rem;
-                min-width: 0.8rem;
                 max-width: 0.8rem;
+                min-width: 0.8rem;
 
                 @media only screen and (max-width: $collapseNavbarWidth) {
                     width: 0.5rem;
-                    min-width: 0.5rem;
                     max-width: 0.5rem;
+                    min-width: 0.5rem;
                 }
             }
         }
@@ -782,34 +792,34 @@ img {
 
     .goTopContainer {
         position: absolute;
-        right: 0;
-        top: 10px;
-        width: 3rem;
-        height: 3rem;
-        margin: 1rem;
         transform: scale(1);
+        height: 3rem;
+        width: 3rem;
+        top: 10px;
+        right: 0;
         opacity: 0;
+        margin: 1rem;
         @include border-radius(100vw);
         @include box-shadow(0 0 15px 0 rgba(0, 0, 0, 0.4));
         @include transition(all 0.2s ease-in-out);
 
         @media only screen and (max-width: $collapseNavbarWidth) {
-            top: -3.5rem;
             height: 2.5rem;
-            min-height: 2.5rem;
             max-height: 2.5rem;
+            min-height: 2.5rem;
             width: 2.5rem;
-            min-width: 2.5rem;
             max-width: 2.5rem;
+            min-width: 2.5rem;
+            top: -3.5rem;
             margin: 0.5rem;
         }
 
         .goTop {
-            width: 100%;
-            height: 100%;
-            padding: 0.9rem;
             transform: rotate(90deg);
+            height: 100%;
+            width: 100%;
             color: white;
+            padding: 0.9rem;
 
             @media only screen and (max-width: $collapseNavbarWidth) {
                 padding: 0.7rem;
@@ -830,10 +840,151 @@ img {
     }
 
     .info {
-        height: 10rem;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        height: 15rem;
         width: 100%;
         background-color: rgb(75, 75, 75);
-        // overflow: visible;
+        margin-top: 3rem;
+
+        @media only screen and (max-width: $collapseNavbarWidth) {
+            margin-top: 0;
+            height: 11rem;
+        }
+
+        .nameContainer {
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            height: $navbarHeight;
+
+            @media only screen and (max-width: $collapseNavbarWidth) {
+                height: $navbarHeight * 0.7;
+            }
+
+            .icon {
+                height: $navbarHeight;
+                max-height: $navbarHeight;
+                min-height: $navbarHeight;
+                width: $navbarHeight;
+                max-width: $navbarHeight;
+                min-width: $navbarHeight;
+                padding: 1.5rem;
+
+                @media only screen and (max-width: $collapseNavbarWidth) {
+                    height: $navbarHeight * 0.7;
+                    max-height: $navbarHeight * 0.7;
+                    min-height: $navbarHeight * 0.7;
+                    width: $navbarHeight * 0.7;
+                    max-width: $navbarHeight * 0.7;
+                    min-width: $navbarHeight * 0.7;
+                    padding: 1.1rem;
+                    padding-right: 1rem;
+                }
+
+                stop {
+                    @include transition(all 0.3s ease-in-out);
+                }
+
+                &.web {
+                    .stop1 {
+                        stop-color: #2192bf;
+                    }
+
+                    .stop2 {
+                        stop-color: #02f8ab;
+                    }
+                }
+
+                &.game {
+                    .stop1 {
+                        stop-color: #f46b6b;
+                    }
+
+                    .stop2 {
+                        stop-color: #f4a658;
+                    }
+                }
+
+                &.design {
+                    .stop1 {
+                        stop-color: #733fff;
+                    }
+
+                    .stop2 {
+                        stop-color: #fab4d6;
+                    }
+                }
+            }
+
+            .name {
+                color: $text-white;
+                margin-right: 1.5rem;
+                font-size: 1.4rem;
+                font-weight: 600;
+
+                @media only screen and (max-width: $collapseNavbarWidth) {
+                    flex-grow: 1;
+                    font-size: 1rem;
+                }
+            }
+        }
+
+        form {
+            @include transition(all 0.3s ease-in-out);
+            user-select: none;
+
+            .email {
+                cursor: none;
+                user-select: none;
+                width: 100%;
+                background: none;
+                color: white;
+                opacity: 0.4;
+                margin: 0.5rem 0 1rem;
+                border: 0;
+                outline: none;
+                font-size: 1.1rem;
+                font-weight: 600;
+                text-align: center;
+                caret-color: transparent;
+
+                &::-moz-selection {
+                    cursor: none;
+                    color: white;
+                    background: transparent;
+                    caret-color: transparent;
+                }
+
+                &::selection {
+                    cursor: none;
+                    color: white;
+                    background: transparent;
+                    caret-color: transparent;
+                }
+
+                @media only screen and (max-width: $collapseNavbarWidth) {
+                    font-size: 1rem;
+                }
+            }
+
+            &:hover {
+                transform: scale(1.05);
+            }
+        }
+
+        .emailCopy {
+            color: rgba(255, 255, 255, 0.3);
+            font-size: 1rem;
+            font-weight: 600;
+            opacity: 0;
+
+            @media only screen and (max-width: $collapseNavbarWidth) {
+                font-size: 0.9rem;
+            }
+        }
     }
 }
 
@@ -892,8 +1043,8 @@ img {
     }
 
     &.black {
-        border: solid 1px rgba(71, 71, 71, 0.15);
         background: radial-gradient(circle, rgba(0, 0, 0, 0.7) 0%, rgba(0, 0, 0, 0.6) 75%);
+        border: solid 1px rgba(71, 71, 71, 0.15);
     }
 
     &.apps {
@@ -1633,6 +1784,36 @@ img {
                     }
                 }
             }
+        }
+    }
+}
+
+// #######################################
+//      ABOUT
+// #######################################
+
+.about {
+}
+
+// #######################################
+//      FADEOUT ANIMATION
+// #######################################
+
+.fadeOut {
+    @include animation(fadeOut 1.5s ease-in-out);
+
+    @keyframes fadeOut {
+        0% {
+            opacity: 0;
+        }
+        20% {
+            opacity: 1;
+        }
+        70% {
+            opacity: 1;
+        }
+        100% {
+            opacity: 0;
         }
     }
 }
