--- a/src/index.scss
+++ b/src/index.scss
@@ -495,6 +495,15 @@ img {
         align-items: center;
         justify-content: center;
         height: $navbarHeight;
+        @include transition(transform 0.3s ease-in-out);
+
+        &:hover {
+            transform: scale(1.05);
+
+            @media only screen and (max-width: $collapseNavbarWidth) {
+                transform: scale(1);
+            }
+        }
 
         @media only screen and (max-width: $collapseNavbarWidth) {
             height: $navbarHeight * 0.7;
@@ -859,6 +868,15 @@ img {
             align-items: center;
             justify-content: center;
             height: $navbarHeight;
+            @include transition(transform 0.3s ease-in-out);
+
+            &:hover {
+                transform: scale(1.05);
+
+                @media only screen and (max-width: $collapseNavbarWidth) {
+                    transform: scale(1);
+                }
+            }
 
             @media only screen and (max-width: $collapseNavbarWidth) {
                 height: $navbarHeight * 0.7;
@@ -921,7 +939,7 @@ img {
 
             .name {
                 color: $text-white;
-                margin-right: 1.5rem;
+                margin-right: 2rem;
                 font-size: 1.4rem;
                 font-weight: 600;
 
@@ -1056,7 +1074,7 @@ img {
         backdrop-filter: blur(10px);
     }
 
-    &.about {
+    &.aboutbackground {
         backdrop-filter: blur(15px);
     }
 
@@ -1710,7 +1728,7 @@ img {
         right: 0;
         overflow: visible;
         will-change: transform;
-        touch-action: pan-y;
+        @include touch-action(pan-y);
 
         .noVideo & {
             .horizontal & {
@@ -1815,11 +1833,26 @@ img {
     display: flex;
     align-items: center;
     justify-content: center;
+    pointer-events: none;
     @include border-radius(0);
+    @include touch-action(none);
 
     @media only screen and (max-width: $collapseNavbarWidth) {
         align-items: unset;
         padding-top: 2.5vw;
+    }
+
+    .aboutbackground {
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        pointer-events: all;
+
+        &.disabled {
+            pointer-events: none;
+        }
     }
 
     .aboutContainer {
@@ -1828,6 +1861,8 @@ img {
         flex-direction: column;
         align-items: center;
         padding-bottom: 2em;
+        pointer-events: all;
+        @include touch-action(none);
 
         @media only screen and (max-width: $collapseNavbarWidth) {
             max-width: 95%;
@@ -1839,11 +1874,13 @@ img {
             .profilePicture {
                 width: calc(100% - 2rem);
                 margin: 1rem;
+                pointer-events: none;
                 @include border-radius(10px);
 
                 @media only screen and (max-width: $collapseNavbarWidth) {
                     width: calc(100% - 1rem);
                     margin: 0.5rem;
+                    pointer-events: none;
                 }
             }
 
