--- a/src/index.scss
+++ b/src/index.scss
@@ -406,14 +406,7 @@ img {
     backdrop-filter: blur(5px);
     @include box-shadow(0 0 10px rgba(0, 0, 0, 0.2));
     @include border-radius(100vw);
-    @include transition(
-        background-color 0.2s ease-in-out,
-        opacity 0.2s ease-in-out,
-        transform 0.2s ease-in-out,
-        box-shadow 0.2s ease-in-out,
-        width 0.2s ease-in-out,
-        height 0.2s ease-in-out
-    );
+    @include transition(background-color 0.2s ease-in-out, opacity 0.2s ease-in-out, transform 0.2s ease-in-out, box-shadow 0.2s ease-in-out, width 0.2s ease-in-out, height 0.2s ease-in-out);
 
     // HIDDEN
     &.hidden {
@@ -1086,7 +1079,15 @@ img {
     // ###################################################
 
     &.matchEat {
-        background: radial-gradient(circle, rgba(255, 119, 101d, 0.3) 0%, rgba(255, 119, 101, 0.5) 75%);
+        background: radial-gradient(circle, rgba(255, 119, 101, 0.3) 0%, rgba(255, 119, 101, 0.5) 75%);
+    }
+
+    &.godHead {
+        background: radial-gradient(circle, rgba(255, 255, 255, 0.3) 0%, rgba(255, 255, 255, 0.5) 75%);
+    }
+
+    &.cryptoPlace {
+        background: radial-gradient(circle, rgba(60, 60, 60, 0.3) 0%, rgba(60, 60, 60, 0.5) 75%);
     }
 
     &.gstocks {
